# sdl2tutorial

./: .gitignore  CMakeLists.txt  main.cpp
